# Prism-shell-ai

./: .gitignore  README.md  build_prompt.py  generator.py  hybrid_search_with_reranking.py  main.py  pyproject.toml
backend/: .gitignore  README.md  main.py  new_raw_data.txt  pyproject.toml
backend/agents/: researcher.py
backend/core/: prompts.py  state.py
backend/engine/: data_manager.py  graph.py
backend/services/: ingestion.py  vector_db.py
backend/src/: main.py
backend/src/agents/: researcher.py
backend/src/core/: database.py  prompts.py  state.py
backend/src/engine/: data_manager.py  graph.py
backend/src/services/: ingestion.py  llm.py  vector_db.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/context/: queryContext.jsx
frontend/src/pages/: Home.jsx  QueryResponse.jsx
src/: build_prompt.py  chunker.py  evaluator.py  generator.py  hybrid_search.py  main.py
