[project]
name = "langgraph-rag-project"
version = "0.1.0"
description = "A project for building a Retrieval-Augmented Generation (RAG) system using LangGraph and LangChain."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==2.1.0",
    "python-dotenv==1.2.2",
    "langchain-core==1.3.1",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.2.2",
    "langgraph==1.1.9",
    "sentence-transformers==5.4.1",
    "pydantic==2.13.3",
    "huggingface-hub==1.11.0",
    "qdrant-client==1.12.0",
    "langchain-qdrant>=1.0.0",
    "fastembed>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This tells setuptools: "Don't try to find any packages to install"
packages = []
