[project]
name = "langgraph-rag-project"
version = "0.1.0"
description = "A project for building a Retrieval-Augmented Generation (RAG) system using LangGraph and LangChain."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==2.1.0",
    "python-dotenv==1.2.2",
    "langchain-core==1.3.1",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.2.2",
    "langgraph==1.1.9",
    "sentence-transformers==5.4.1",
    "pydantic==2.13.3",
    "huggingface-hub==1.11.0",
    "qdrant-client==1.12.0",
    "langchain-qdrant==1.0.0",
    "fastembed==0.8.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "python-multipart==0.0.27",
    "requests==2.33.1",
    "onnxruntime==1.23.2",
    "langgraph-checkpoint-postgres==3.1.0",
    "psycopg[binary]==3.3.4",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "pypdf==6.13.0",
    "chonkie==1.6.8",
    "unstructured>=0.18.32",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This tells setuptools: "Don't try to find any packages to install"
packages = []

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
